// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component TopCitedPublications should render loading indicator 1`] = `
<ForwardRef(Grid)
  container={true}
>
  <ForwardRef(Grid)
    item={true}
    xs={true}
  />
  <ForwardRef(Grid)
    item={true}
  >
    <WithStyles(InlineLoader)
      message="Loading trending works"
    />
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    xs={true}
  />
</ForwardRef(Grid)>
`;

exports[`Component TopCitedPublications should render tabs with xs width properly 1`] = `
<Fragment>
  <StandardCard
    noHeader={true}
  >
    <ForwardRef(Tabs)
      centered={true}
      classes={
        Object {
          "indicator": undefined,
        }
      }
      indicatorColor="primary"
      onChange={[Function]}
      textColor="inherit"
      value="altmetric"
      variant="fullWidth"
    >
      <ForwardRef(Tab)
        key="altmetric"
        label="Trending"
        value="altmetric"
      />
      <ForwardRef(Tab)
        key="scopus"
        label="Scopus"
        value="scopus"
      />
      <ForwardRef(Tab)
        key="thomson"
        label="WOS"
        value="thomson"
      />
    </ForwardRef(Tabs)>
    <ForwardRef(Grid)
      alignContent="flex-start"
      alignItems="flex-start"
      container={true}
      key="altmetric"
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <ForwardRef(Grid)
        item={true}
        xs={true}
      >
        <ForwardRef(Typography)
          color="primary"
          key="altmetric"
          variant="h6"
        >
          <div
            className="fez-icon altmetric xxlarge"
            key="altmetric"
          />
          Altmetric score
        </ForwardRef(Typography)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        style={
          Object {
            "marginTop": -12,
          }
        }
        xs="auto"
      >
        <Connect(HelpIcon)
          buttonLabel="CLOSE"
          text={
            <React.Fragment>
              <h3>
                WOS and Scopus
              </h3>
              <p>
                The + (plus) value indicates how much the citation count has increased in the last three months.
              </p>
              <h3>
                Altmetric score (social media activity)
              </h3>
              <p>
                The Altmetric score measures social media activity. The + (plus) value shows the increase in social media activity over time.
              </p>
              <p>
                You can click on the number as a link to see who is citing each work, or in the case of Altmetric who is referencing the work in social media and news outlets.
              </p>
              For more information visit :
              <br />
              <a
                href="https://www.altmetric.com/about-altmetrics/what-are-altmetrics/"
                rel="noopener noreferrer"
                target="_blank"
              >
                https://www.altmetric.com/about-altmetrics/what-are-altmetrics/
              </a>
            </React.Fragment>
          }
          title="About these metrics"
        />
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        id="topCitedPublications"
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
        xs={12}
      >
        <Memo(PublicationsList)
          hideCountTotal={true}
          key="altmetric"
          publicationsList={
            Array [
              Object {
                "fez_datastream_info": Array [],
                "fez_matched_journals": Object {
                  "mtj_jnl_id": 3283,
                  "mtj_pid": "UQ:330391",
                  "mtj_status": "A",
                },
                "fez_record_search_key_article_number": null,
                "fez_record_search_key_assigned_group_id": Array [],
                "fez_record_search_key_assigned_user_id": Array [],
                "fez_record_search_key_author": Array [
                  Object {
                    "rek_author": "Frazer, Ian H.",
                    "rek_author_id": 28844413,
                    "rek_author_order": 1,
                    "rek_author_pid": "UQ:330391",
                    "rek_author_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_author_affiliation_country": Array [
                  Object {
                    "rek_author_affiliation_country": "aus",
                    "rek_author_affiliation_country_id": 344457,
                    "rek_author_affiliation_country_order": 1,
                    "rek_author_affiliation_country_pid": "UQ:330391",
                    "rek_author_affiliation_country_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_author_affiliation_full_address": Array [
                  Object {
                    "rek_author_affiliation_full_address": "Woolloongabba, QLD 4102",
                    "rek_author_affiliation_full_address_id": 377945,
                    "rek_author_affiliation_full_address_order": 1,
                    "rek_author_affiliation_full_address_pid": "UQ:330391",
                    "rek_author_affiliation_full_address_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_author_affiliation_id": Array [],
                "fez_record_search_key_author_affiliation_name": Array [
                  Object {
                    "rek_author_affiliation_name": "University of Queensland Diamantina Institute, Translational Research Institute, University of Queensland",
                    "rek_author_affiliation_name_id": 345319,
                    "rek_author_affiliation_name_order": 1,
                    "rek_author_affiliation_name_pid": "UQ:330391",
                    "rek_author_affiliation_name_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_author_id": Array [
                  Object {
                    "rek_author_id": 410,
                    "rek_author_id_id": 28217147,
                    "rek_author_id_lookup": "Frazer, Ian H.",
                    "rek_author_id_order": 1,
                    "rek_author_id_pid": "UQ:330391",
                    "rek_author_id_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_biosis_id": null,
                "fez_record_search_key_contributor": Array [],
                "fez_record_search_key_contributor_id": Array [],
                "fez_record_search_key_corresponding_country": Array [
                  Object {
                    "rek_corresponding_country": "aus",
                    "rek_corresponding_country_id": 285972,
                    "rek_corresponding_country_order": 1,
                    "rek_corresponding_country_pid": "UQ:330391",
                    "rek_corresponding_country_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_corresponding_email": Array [
                  Object {
                    "rek_corresponding_email": "i.frazer@uq.edu.au",
                    "rek_corresponding_email_id": 63548,
                    "rek_corresponding_email_order": 1,
                    "rek_corresponding_email_pid": "UQ:330391",
                    "rek_corresponding_email_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_corresponding_name": Array [
                  Object {
                    "rek_corresponding_name": "Frazer I.H.",
                    "rek_corresponding_name_id": 56163,
                    "rek_corresponding_name_order": 1,
                    "rek_corresponding_name_pid": "UQ:330391",
                    "rek_corresponding_name_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_corresponding_organisation": Array [],
                "fez_record_search_key_datastream_policy": null,
                "fez_record_search_key_date_available": Object {
                  "rek_date_available": "2014-01-01T00:00:00Z",
                  "rek_date_available_id": 914088,
                  "rek_date_available_pid": "UQ:330391",
                  "rek_date_available_xsdmf_id": null,
                },
                "fez_record_search_key_doi": Object {
                  "fez_altmetric": Object {
                    "as_1d": 0,
                    "as_1m": 0,
                    "as_1w": 0,
                    "as_1y": 5.7,
                    "as_2d": 0,
                    "as_3d": 0,
                    "as_3m": 3,
                    "as_4d": 0,
                    "as_5d": 0,
                    "as_6d": 0,
                    "as_6m": 5.7,
                    "as_amid": 101417,
                    "as_blogs_posts_count": 28,
                    "as_citation_url": "https://queensland.altmetric.com/details/101417",
                    "as_created": "1393319416",
                    "as_doi": "10.1038/nature05874",
                    "as_f1000_posts_count": 3,
                    "as_facebook_posts_count": 1,
                    "as_googleplus_posts_count": 0,
                    "as_id": 7912,
                    "as_last_checked": "1525691899",
                    "as_linkedin_posts_count": 0,
                    "as_news_posts_count": 3,
                    "as_peer_reviews_posts_count": 0,
                    "as_pinterest_posts_count": 1,
                    "as_policy_posts_count": 1,
                    "as_qa_posts_count": 0,
                    "as_reddit_posts_count": 0,
                    "as_score": 5,
                    "as_syllabi_posts_count": 0,
                    "as_total_posts_count": 61,
                    "as_twitter_posts_count": 7,
                    "as_video_posts_count": 1,
                    "as_weibo_posts_count": 0,
                    "as_wikipedia_posts_count": 15,
                  },
                  "rek_doi": "10.4049/jimmunol.1490012",
                  "rek_doi_id": 1519269,
                  "rek_doi_pid": "UQ:330391",
                  "rek_doi_xsdmf_id": null,
                },
                "fez_record_search_key_end_page": Object {
                  "rek_end_page": "4011",
                  "rek_end_page_id": 5496808,
                  "rek_end_page_pid": "UQ:330391",
                  "rek_end_page_xsdmf_id": null,
                },
                "fez_record_search_key_file_attachment_access_condition": Array [],
                "fez_record_search_key_file_attachment_embargo_date": Array [],
                "fez_record_search_key_file_attachment_name": Array [],
                "fez_record_search_key_grant_acronym": Array [],
                "fez_record_search_key_grant_agency": Array [],
                "fez_record_search_key_grant_agency_id": Array [],
                "fez_record_search_key_grant_id": Array [],
                "fez_record_search_key_grant_text": Array [],
                "fez_record_search_key_herdc_code": Object {
                  "rek_herdc_code": 450009,
                  "rek_herdc_code_id": 4651366,
                  "rek_herdc_code_lookup": "C1",
                  "rek_herdc_code_pid": "UQ:330391",
                  "rek_herdc_code_xsdmf_id": null,
                },
                "fez_record_search_key_herdc_status": Object {
                  "rek_herdc_status": 453221,
                  "rek_herdc_status_id": 3563996,
                  "rek_herdc_status_lookup": "Confirmed Code",
                  "rek_herdc_status_pid": "UQ:330391",
                  "rek_herdc_status_xsdmf_id": null,
                },
                "fez_record_search_key_institutional_status": Object {
                  "rek_institutional_status": 453223,
                  "rek_institutional_status_id": 3225739,
                  "rek_institutional_status_lookup": "UQ",
                  "rek_institutional_status_pid": "UQ:330391",
                  "rek_institutional_status_xsdmf_id": null,
                },
                "fez_record_search_key_isbn": Array [],
                "fez_record_search_key_isderivationof": Array [],
                "fez_record_search_key_isi_loc": Object {
                  "rek_isi_loc": "000334672800003",
                  "rek_isi_loc_id": 3888561,
                  "rek_isi_loc_pid": "UQ:330391",
                  "rek_isi_loc_xsdmf_id": null,
                },
                "fez_record_search_key_ismemberof": Array [
                  Object {
                    "rek_ismemberof": "UQ:3931",
                    "rek_ismemberof_id": 11502328,
                    "rek_ismemberof_lookup": "UQ Diamantina Institute Publications",
                    "rek_ismemberof_order": 1,
                    "rek_ismemberof_pid": "UQ:330391",
                    "rek_ismemberof_xsdmf_id": null,
                  },
                  Object {
                    "rek_ismemberof": "UQ:320785",
                    "rek_ismemberof_id": 11502329,
                    "rek_ismemberof_lookup": "Official 2015 Collection",
                    "rek_ismemberof_order": 2,
                    "rek_ismemberof_pid": "UQ:330391",
                    "rek_ismemberof_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_issn": Array [
                  Object {
                    "fez_journal_issns": Array [
                      Object {
                        "fez_journal": Object {
                          "jnl_created_date": "2010-11-19 00:00:00",
                          "jnl_era_id": 15513,
                          "jnl_era_year": 2010,
                          "jnl_foreign_name": null,
                          "jnl_id": 3283,
                          "jnl_journal_name": "Journal of Immunology",
                          "jnl_rank": "A*",
                          "jnl_updated_date": "2010-11-19 00:00:00",
                        },
                        "jni_id": 5435,
                        "jni_issn": "1550-6606",
                        "jni_issn_order": 2,
                        "jni_jnl_id": 3283,
                      },
                      Object {
                        "fez_journal": Object {
                          "jnl_created_date": "2011-10-28 00:00:00",
                          "jnl_era_id": 15513,
                          "jnl_era_year": 2012,
                          "jnl_foreign_name": "",
                          "jnl_id": 30578,
                          "jnl_journal_name": "Journal of Immunology",
                          "jnl_rank": null,
                          "jnl_updated_date": "2011-10-28 00:00:00",
                        },
                        "jni_id": 50560,
                        "jni_issn": "1550-6606",
                        "jni_issn_order": 2,
                        "jni_jnl_id": 30578,
                      },
                      Object {
                        "fez_journal": Object {
                          "jnl_created_date": "2014-07-16 00:00:00",
                          "jnl_era_id": 15513,
                          "jnl_era_year": 2015,
                          "jnl_foreign_name": "",
                          "jnl_id": 47977,
                          "jnl_journal_name": "Journal of Immunology",
                          "jnl_rank": null,
                          "jnl_updated_date": "2014-07-16 00:00:00",
                        },
                        "jni_id": 78427,
                        "jni_issn": "1550-6606",
                        "jni_issn_order": 2,
                        "jni_jnl_id": 47977,
                      },
                      Object {
                        "fez_journal": Object {
                          "jnl_created_date": "2017-09-06 00:00:00",
                          "jnl_era_id": 15513,
                          "jnl_era_year": 2018,
                          "jnl_foreign_name": "",
                          "jnl_id": 100768,
                          "jnl_journal_name": "Journal of Immunology",
                          "jnl_rank": null,
                          "jnl_updated_date": "2017-09-06 00:00:00",
                        },
                        "jni_id": 165940,
                        "jni_issn": "1550-6606",
                        "jni_issn_order": 2,
                        "jni_jnl_id": 100768,
                      },
                    ],
                    "fez_sherpa_romeo": Object {
                      "srm_date_updated": "2017-09-30 18:51:44",
                      "srm_id": 6131,
                      "srm_issn": "1550-6606",
                      "srm_journal_link": "http://example.com",
                      "srm_journal_name": "Journal of Immunology",
                      "srm_json": "{}",
                    },
                    "rek_issn": "1550-6606",
                    "rek_issn_id": 5088122,
                    "rek_issn_lookup": "",
                    "rek_issn_order": 1,
                    "rek_issn_pid": "UQ:330391",
                    "rek_issn_xsdmf_id": null,
                  },
                  Object {
                    "fez_journal_issns": Array [
                      Object {
                        "fez_journal": Object {
                          "jnl_created_date": "2010-11-19 00:00:00",
                          "jnl_era_id": 15513,
                          "jnl_era_year": 2010,
                          "jnl_foreign_name": null,
                          "jnl_id": 3283,
                          "jnl_journal_name": "Journal of Immunology",
                          "jnl_rank": "A*",
                          "jnl_updated_date": "2010-11-19 00:00:00",
                        },
                        "jni_id": 5434,
                        "jni_issn": "0022-1767",
                        "jni_issn_order": 1,
                        "jni_jnl_id": 3283,
                      },
                      Object {
                        "fez_journal": Object {
                          "jnl_created_date": "2011-10-28 00:00:00",
                          "jnl_era_id": 15513,
                          "jnl_era_year": 2012,
                          "jnl_foreign_name": "",
                          "jnl_id": 30578,
                          "jnl_journal_name": "Journal of Immunology",
                          "jnl_rank": null,
                          "jnl_updated_date": "2011-10-28 00:00:00",
                        },
                        "jni_id": 50559,
                        "jni_issn": "0022-1767",
                        "jni_issn_order": 1,
                        "jni_jnl_id": 30578,
                      },
                      Object {
                        "fez_journal": Object {
                          "jnl_created_date": "2014-07-16 00:00:00",
                          "jnl_era_id": 15513,
                          "jnl_era_year": 2015,
                          "jnl_foreign_name": "",
                          "jnl_id": 47977,
                          "jnl_journal_name": "Journal of Immunology",
                          "jnl_rank": null,
                          "jnl_updated_date": "2014-07-16 00:00:00",
                        },
                        "jni_id": 78426,
                        "jni_issn": "0022-1767",
                        "jni_issn_order": 1,
                        "jni_jnl_id": 47977,
                      },
                      Object {
                        "fez_journal": Object {
                          "jnl_created_date": "2017-09-06 00:00:00",
                          "jnl_era_id": 15513,
                          "jnl_era_year": 2018,
                          "jnl_foreign_name": "",
                          "jnl_id": 100768,
                          "jnl_journal_name": "Journal of Immunology",
                          "jnl_rank": null,
                          "jnl_updated_date": "2017-09-06 00:00:00",
                        },
                        "jni_id": 165939,
                        "jni_issn": "0022-1767",
                        "jni_issn_order": 1,
                        "jni_jnl_id": 100768,
                      },
                    ],
                    "fez_sherpa_romeo": Object {
                      "srm_date_updated": "2017-09-30 15:14:27",
                      "srm_id": 6130,
                      "srm_issn": "0022-1767",
                      "srm_journal_link": "http://example.com",
                      "srm_journal_name": "Journal of Immunology",
                      "srm_json": "{}",
                    },
                    "rek_issn": "0022-1767",
                    "rek_issn_id": 5088123,
                    "rek_issn_lookup": "",
                    "rek_issn_order": 2,
                    "rek_issn_pid": "UQ:330391",
                    "rek_issn_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_issue_number": Object {
                  "rek_issue_number": "9",
                  "rek_issue_number_id": 4396330,
                  "rek_issue_number_pid": "UQ:330391",
                  "rek_issue_number_xsdmf_id": null,
                },
                "fez_record_search_key_journal_name": Object {
                  "rek_journal_name": "Journal of Immunology",
                  "rek_journal_name_id": 5045853,
                  "rek_journal_name_pid": "UQ:330391",
                  "rek_journal_name_xsdmf_id": null,
                },
                "fez_record_search_key_keywords": Array [
                  Object {
                    "rek_keywords": "Human papillomavirus",
                    "rek_keywords_id": 29137284,
                    "rek_keywords_order": 1,
                    "rek_keywords_pid": "UQ:330391",
                    "rek_keywords_xsdmf_id": null,
                  },
                  Object {
                    "rek_keywords": "Papillomavirus",
                    "rek_keywords_id": 29137285,
                    "rek_keywords_order": 2,
                    "rek_keywords_pid": "UQ:330391",
                    "rek_keywords_xsdmf_id": null,
                  },
                  Object {
                    "rek_keywords": "Virus-like particle",
                    "rek_keywords_id": 29137286,
                    "rek_keywords_order": 3,
                    "rek_keywords_pid": "UQ:330391",
                    "rek_keywords_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_language": Array [
                  Object {
                    "rek_language": "eng",
                    "rek_language_id": 5217768,
                    "rek_language_order": 1,
                    "rek_language_pid": "UQ:330391",
                    "rek_language_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_language_of_journal_name": Array [],
                "fez_record_search_key_language_of_title": Array [],
                "fez_record_search_key_license": null,
                "fez_record_search_key_link": Array [],
                "fez_record_search_key_link_description": Array [],
                "fez_record_search_key_native_script_journal_name": null,
                "fez_record_search_key_native_script_title": null,
                "fez_record_search_key_notes": null,
                "fez_record_search_key_oa_embargo_days": Object {
                  "rek_oa_embargo_days": "365",
                  "rek_oa_embargo_days_id": 5678,
                  "rek_oa_embargo_days_pid": "UQ:330391",
                  "rek_oa_embargo_days_xsdmf_id": null,
                },
                "fez_record_search_key_oa_notes": Object {
                  "rek_oa_notes": "12 month embargo",
                  "rek_oa_notes_id": 131336,
                  "rek_oa_notes_pid": "UQ:330391",
                  "rek_oa_notes_xsdmf_id": null,
                },
                "fez_record_search_key_oa_status": Object {
                  "rek_oa_status": 453693,
                  "rek_oa_status_id": 311344,
                  "rek_oa_status_lookup": "DOI",
                  "rek_oa_status_pid": "UQ:330391",
                  "rek_oa_status_xsdmf_id": null,
                },
                "fez_record_search_key_oa_status_type": null,
                "fez_record_search_key_place_of_publication": Object {
                  "rek_place_of_publication": "Bethesda, MD, United States",
                  "rek_place_of_publication_id": 4161211,
                  "rek_place_of_publication_pid": "UQ:330391",
                  "rek_place_of_publication_xsdmf_id": null,
                },
                "fez_record_search_key_publisher": Object {
                  "rek_publisher": "American Association of Immunologists",
                  "rek_publisher_id": 4424543,
                  "rek_publisher_pid": "UQ:330391",
                  "rek_publisher_xsdmf_id": null,
                },
                "fez_record_search_key_pubmed_central_id": null,
                "fez_record_search_key_pubmed_id": Object {
                  "rek_pubmed_id": "24748633",
                  "rek_pubmed_id_id": 218283,
                  "rek_pubmed_id_pid": "UQ:330391",
                  "rek_pubmed_id_xsdmf_id": null,
                },
                "fez_record_search_key_refereed": null,
                "fez_record_search_key_refereed_source": Object {
                  "rek_refereed_source": "453635",
                  "rek_refereed_source_id": 1174248,
                  "rek_refereed_source_lookup": "Ulrichs",
                  "rek_refereed_source_pid": "UQ:330391",
                  "rek_refereed_source_xsdmf_id": null,
                },
                "fez_record_search_key_retracted": null,
                "fez_record_search_key_roman_script_journal_name": null,
                "fez_record_search_key_roman_script_title": null,
                "fez_record_search_key_scopus_id": Object {
                  "fez_scopus_citations": Object {
                    "sc_1d": 0,
                    "sc_1m": 0,
                    "sc_1w": 0,
                    "sc_1y": 147,
                    "sc_2d": 0,
                    "sc_3d": 0,
                    "sc_3m": 1,
                    "sc_4d": 0,
                    "sc_5d": 0,
                    "sc_6d": 0,
                    "sc_6m": 0,
                    "sc_citation_url": "https://go.openathens.net/redirector/uq.edu.au?url=http://www.scopus.com/results/citedbyresults.url?sort=plf-f&src=s&sot=cite&sdt=a&cite=2-s2.0-84899524861",
                    "sc_count": 13,
                    "sc_created": "1526521574",
                    "sc_eid": "2-s2.0-84899524861",
                    "sc_last_checked": "1526521574",
                  },
                  "rek_scopus_id": "2-s2.0-84899524861",
                  "rek_scopus_id_id": 2395638,
                  "rek_scopus_id_pid": "UQ:330391",
                  "rek_scopus_id_xsdmf_id": null,
                },
                "fez_record_search_key_start_page": Object {
                  "rek_start_page": "4007",
                  "rek_start_page_id": 5567023,
                  "rek_start_page_pid": "UQ:330391",
                  "rek_start_page_xsdmf_id": null,
                },
                "fez_record_search_key_subject": Array [
                  Object {
                    "rek_subject": 453394,
                    "rek_subject_id": 9519701,
                    "rek_subject_lookup": "2403 Immunology",
                    "rek_subject_order": 1,
                    "rek_subject_pid": "UQ:330391",
                    "rek_subject_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_total_pages": Object {
                  "rek_total_pages": "5",
                  "rek_total_pages_id": 5474537,
                  "rek_total_pages_pid": "UQ:330391",
                  "rek_total_pages_xsdmf_id": null,
                },
                "fez_record_search_key_translated_journal_name": null,
                "fez_record_search_key_translated_title": null,
                "fez_record_search_key_volume_number": Object {
                  "rek_volume_number": "192",
                  "rek_volume_number_id": 5103536,
                  "rek_volume_number_pid": "UQ:330391",
                  "rek_volume_number_xsdmf_id": null,
                },
                "fez_record_search_key_wok_doc_types": Array [],
                "fez_record_search_key_zoorec_id": null,
                "metricData": Object {
                  "citation_url": "https://queensland.altmetric.com/details/101417",
                  "count": 5,
                  "difference": 3,
                  "source": "altmetric",
                },
                "rek_altmetric_id": 2291601,
                "rek_altmetric_id_xsdmf_id": null,
                "rek_altmetric_score": 5,
                "rek_altmetric_score_xsdmf_id": null,
                "rek_citation": "<a class=\\"author_id_link\\" title=\\"Browse by Author ID for Frazer, Ian H.\\" href=\\"/list/author_id/410/\\">Frazer, Ian H.</a> (<span class=\\"citation_date\\">2014</span>) <a class=\\"citation_title\\" title=\\"Click to view Journal Article: Development and implementation of papillomavirus prophylactic vaccines\\" href=\\"/view/UQ:330391\\">Development and implementation of papillomavirus prophylactic vaccines</a>. <i><span class=\\"citation_journal_name\\">Journal of Immunology</span></i>, <i><span class=\\"citation_volume_number\\">192</span></i> <span class=\\"citation_issue_number\\">9</span>: <span class=\\"citation_start_page\\">4007</span>-<span class=\\"citation_end_page\\">4011</span>. doi:<span class=\\"citation_doi\\">10.4049/jimmunol.1490012</span>",
                "rek_copyright": "on",
                "rek_copyright_xsdmf_id": null,
                "rek_created_date": "2014-05-20T00:24:11Z",
                "rek_created_date_xsdmf_id": null,
                "rek_date": "2014-05-01T00:00:00Z",
                "rek_date_xsdmf_id": null,
                "rek_depositor": 8524,
                "rek_depositor_affiliation": 1048,
                "rek_depositor_affiliation_xsdmf_id": null,
                "rek_depositor_xsdmf_id": null,
                "rek_description": "Translation of basic scientific findings into practical patient outcomes is a significant exercise even when the goal is conceptually straightforward, as in the development of a vaccine for an infectious disease. Recognition of the association of cervical cancer with papillomavirus infection encouraged development of a vaccine to help with prevention of this very common cancer, causing over 250,000 deaths each year worldwide. To introduce a vaccine program, it was however necessary to develop a technology for making viral Ag, demonstrate that systemic immunization could provide mucosal surface protection in the genital tract, develop assays for vaccine potency, and understand enough about the epidemiology and natural history of the infection to plan effective intervention strategies. This process took ~25 years. The major hurdle, now that effective vaccines are available, is to ensure their deployment in the countries where they are most needed. The development and deployment of human papillomavirus vaccines demonstrate the benefits of collaborative research activity across the globe, and between academia and industry, to translate scientific discoveries into public health benefits.",
                "rek_description_xsdmf_id": null,
                "rek_display_type": 179,
                "rek_display_type_lookup": "Journal Article",
                "rek_display_type_xsdmf_id": null,
                "rek_file_downloads": 0,
                "rek_formatted_abstract": null,
                "rek_formatted_abstract_xsdmf_id": null,
                "rek_formatted_title": null,
                "rek_formatted_title_xsdmf_id": null,
                "rek_genre": "Journal Article",
                "rek_genre_type": "Article (original research)",
                "rek_genre_type_xsdmf_id": null,
                "rek_genre_xsdmf_id": null,
                "rek_herdc_notes": "&nbsp;Ian H. Frazer, University of Queensland Diamantina Institute, Translational Research Institute, 37 Kent Street, Woolloongabba, QLD 4102, Australia.",
                "rek_herdc_notes_xsdmf_id": null,
                "rek_object_type": 3,
                "rek_object_type_lookup": "Record",
                "rek_object_type_xsdmf_id": null,
                "rek_pid": "UQ:330391",
                "rek_pubmed_doc_type": null,
                "rek_pubmed_doc_type_lookup": null,
                "rek_pubmed_doc_type_xsdmf_id": null,
                "rek_scopus_citation_count": 13,
                "rek_scopus_doc_type": "ar",
                "rek_scopus_doc_type_lookup": null,
                "rek_scopus_doc_type_xsdmf_id": null,
                "rek_security_inherited": 1,
                "rek_status": 2,
                "rek_status_lookup": "Published",
                "rek_status_xsdmf_id": null,
                "rek_subtype": "Article (original research)",
                "rek_subtype_xsdmf_id": null,
                "rek_thomson_citation_count": 12,
                "rek_thomson_citation_count_xsdmf_id": null,
                "rek_title": "Development and implementation of papillomavirus prophylactic vaccines",
                "rek_title_xsdmf_id": null,
                "rek_updated_date": "2018-01-19T02:57:37Z",
                "rek_updated_date_xsdmf_id": null,
                "rek_wok_doc_type": "@",
                "rek_wok_doc_type_lookup": null,
                "rek_wok_doc_type_xsdmf_id": null,
              },
            ]
          }
          showMetrics={true}
        />
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </StandardCard>
</Fragment>
`;

exports[`Component TopCitedPublications should render top cited publications 1`] = `
<Fragment>
  <StandardCard
    noHeader={true}
  >
    <ForwardRef(Tabs)
      centered={true}
      classes={
        Object {
          "indicator": undefined,
        }
      }
      indicatorColor="primary"
      onChange={[Function]}
      textColor="inherit"
      value="altmetric"
      variant="fullWidth"
    >
      <ForwardRef(Tab)
        key="altmetric"
        label={
          <span>
            Trending on Altmetric
          </span>
        }
        value="altmetric"
      />
      <ForwardRef(Tab)
        key="scopus"
        label={
          <span>
            Trending on Scopus
          </span>
        }
        value="scopus"
      />
      <ForwardRef(Tab)
        key="thomson"
        label={
          <span>
            Trending on Web of science
          </span>
        }
        value="thomson"
      />
    </ForwardRef(Tabs)>
    <ForwardRef(Grid)
      alignContent="flex-start"
      alignItems="flex-start"
      container={true}
      key="altmetric"
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <ForwardRef(Grid)
        item={true}
        xs={true}
      >
        <ForwardRef(Typography)
          color="primary"
          key="altmetric"
          variant="h6"
        >
          <div
            className="fez-icon altmetric xxlarge"
            key="altmetric"
          />
          Altmetric score
        </ForwardRef(Typography)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        style={
          Object {
            "marginTop": -12,
          }
        }
        xs="auto"
      >
        <Connect(HelpIcon)
          buttonLabel="CLOSE"
          text={
            <React.Fragment>
              <h3>
                WOS and Scopus
              </h3>
              <p>
                The + (plus) value indicates how much the citation count has increased in the last three months.
              </p>
              <h3>
                Altmetric score (social media activity)
              </h3>
              <p>
                The Altmetric score measures social media activity. The + (plus) value shows the increase in social media activity over time.
              </p>
              <p>
                You can click on the number as a link to see who is citing each work, or in the case of Altmetric who is referencing the work in social media and news outlets.
              </p>
              For more information visit :
              <br />
              <a
                href="https://www.altmetric.com/about-altmetrics/what-are-altmetrics/"
                rel="noopener noreferrer"
                target="_blank"
              >
                https://www.altmetric.com/about-altmetrics/what-are-altmetrics/
              </a>
            </React.Fragment>
          }
          title="About these metrics"
        />
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        id="topCitedPublications"
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
        xs={12}
      >
        <Memo(PublicationsList)
          hideCountTotal={true}
          key="altmetric"
          publicationsList={
            Array [
              Object {
                "fez_datastream_info": Array [],
                "fez_matched_journals": Object {
                  "mtj_jnl_id": 3283,
                  "mtj_pid": "UQ:330391",
                  "mtj_status": "A",
                },
                "fez_record_search_key_article_number": null,
                "fez_record_search_key_assigned_group_id": Array [],
                "fez_record_search_key_assigned_user_id": Array [],
                "fez_record_search_key_author": Array [
                  Object {
                    "rek_author": "Frazer, Ian H.",
                    "rek_author_id": 28844413,
                    "rek_author_order": 1,
                    "rek_author_pid": "UQ:330391",
                    "rek_author_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_author_affiliation_country": Array [
                  Object {
                    "rek_author_affiliation_country": "aus",
                    "rek_author_affiliation_country_id": 344457,
                    "rek_author_affiliation_country_order": 1,
                    "rek_author_affiliation_country_pid": "UQ:330391",
                    "rek_author_affiliation_country_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_author_affiliation_full_address": Array [
                  Object {
                    "rek_author_affiliation_full_address": "Woolloongabba, QLD 4102",
                    "rek_author_affiliation_full_address_id": 377945,
                    "rek_author_affiliation_full_address_order": 1,
                    "rek_author_affiliation_full_address_pid": "UQ:330391",
                    "rek_author_affiliation_full_address_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_author_affiliation_id": Array [],
                "fez_record_search_key_author_affiliation_name": Array [
                  Object {
                    "rek_author_affiliation_name": "University of Queensland Diamantina Institute, Translational Research Institute, University of Queensland",
                    "rek_author_affiliation_name_id": 345319,
                    "rek_author_affiliation_name_order": 1,
                    "rek_author_affiliation_name_pid": "UQ:330391",
                    "rek_author_affiliation_name_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_author_id": Array [
                  Object {
                    "rek_author_id": 410,
                    "rek_author_id_id": 28217147,
                    "rek_author_id_lookup": "Frazer, Ian H.",
                    "rek_author_id_order": 1,
                    "rek_author_id_pid": "UQ:330391",
                    "rek_author_id_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_biosis_id": null,
                "fez_record_search_key_contributor": Array [],
                "fez_record_search_key_contributor_id": Array [],
                "fez_record_search_key_corresponding_country": Array [
                  Object {
                    "rek_corresponding_country": "aus",
                    "rek_corresponding_country_id": 285972,
                    "rek_corresponding_country_order": 1,
                    "rek_corresponding_country_pid": "UQ:330391",
                    "rek_corresponding_country_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_corresponding_email": Array [
                  Object {
                    "rek_corresponding_email": "i.frazer@uq.edu.au",
                    "rek_corresponding_email_id": 63548,
                    "rek_corresponding_email_order": 1,
                    "rek_corresponding_email_pid": "UQ:330391",
                    "rek_corresponding_email_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_corresponding_name": Array [
                  Object {
                    "rek_corresponding_name": "Frazer I.H.",
                    "rek_corresponding_name_id": 56163,
                    "rek_corresponding_name_order": 1,
                    "rek_corresponding_name_pid": "UQ:330391",
                    "rek_corresponding_name_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_corresponding_organisation": Array [],
                "fez_record_search_key_datastream_policy": null,
                "fez_record_search_key_date_available": Object {
                  "rek_date_available": "2014-01-01T00:00:00Z",
                  "rek_date_available_id": 914088,
                  "rek_date_available_pid": "UQ:330391",
                  "rek_date_available_xsdmf_id": null,
                },
                "fez_record_search_key_doi": Object {
                  "fez_altmetric": Object {
                    "as_1d": 0,
                    "as_1m": 0,
                    "as_1w": 0,
                    "as_1y": 5.7,
                    "as_2d": 0,
                    "as_3d": 0,
                    "as_3m": 3,
                    "as_4d": 0,
                    "as_5d": 0,
                    "as_6d": 0,
                    "as_6m": 5.7,
                    "as_amid": 101417,
                    "as_blogs_posts_count": 28,
                    "as_citation_url": "https://queensland.altmetric.com/details/101417",
                    "as_created": "1393319416",
                    "as_doi": "10.1038/nature05874",
                    "as_f1000_posts_count": 3,
                    "as_facebook_posts_count": 1,
                    "as_googleplus_posts_count": 0,
                    "as_id": 7912,
                    "as_last_checked": "1525691899",
                    "as_linkedin_posts_count": 0,
                    "as_news_posts_count": 3,
                    "as_peer_reviews_posts_count": 0,
                    "as_pinterest_posts_count": 1,
                    "as_policy_posts_count": 1,
                    "as_qa_posts_count": 0,
                    "as_reddit_posts_count": 0,
                    "as_score": 5,
                    "as_syllabi_posts_count": 0,
                    "as_total_posts_count": 61,
                    "as_twitter_posts_count": 7,
                    "as_video_posts_count": 1,
                    "as_weibo_posts_count": 0,
                    "as_wikipedia_posts_count": 15,
                  },
                  "rek_doi": "10.4049/jimmunol.1490012",
                  "rek_doi_id": 1519269,
                  "rek_doi_pid": "UQ:330391",
                  "rek_doi_xsdmf_id": null,
                },
                "fez_record_search_key_end_page": Object {
                  "rek_end_page": "4011",
                  "rek_end_page_id": 5496808,
                  "rek_end_page_pid": "UQ:330391",
                  "rek_end_page_xsdmf_id": null,
                },
                "fez_record_search_key_file_attachment_access_condition": Array [],
                "fez_record_search_key_file_attachment_embargo_date": Array [],
                "fez_record_search_key_file_attachment_name": Array [],
                "fez_record_search_key_grant_acronym": Array [],
                "fez_record_search_key_grant_agency": Array [],
                "fez_record_search_key_grant_agency_id": Array [],
                "fez_record_search_key_grant_id": Array [],
                "fez_record_search_key_grant_text": Array [],
                "fez_record_search_key_herdc_code": Object {
                  "rek_herdc_code": 450009,
                  "rek_herdc_code_id": 4651366,
                  "rek_herdc_code_lookup": "C1",
                  "rek_herdc_code_pid": "UQ:330391",
                  "rek_herdc_code_xsdmf_id": null,
                },
                "fez_record_search_key_herdc_status": Object {
                  "rek_herdc_status": 453221,
                  "rek_herdc_status_id": 3563996,
                  "rek_herdc_status_lookup": "Confirmed Code",
                  "rek_herdc_status_pid": "UQ:330391",
                  "rek_herdc_status_xsdmf_id": null,
                },
                "fez_record_search_key_institutional_status": Object {
                  "rek_institutional_status": 453223,
                  "rek_institutional_status_id": 3225739,
                  "rek_institutional_status_lookup": "UQ",
                  "rek_institutional_status_pid": "UQ:330391",
                  "rek_institutional_status_xsdmf_id": null,
                },
                "fez_record_search_key_isbn": Array [],
                "fez_record_search_key_isderivationof": Array [],
                "fez_record_search_key_isi_loc": Object {
                  "rek_isi_loc": "000334672800003",
                  "rek_isi_loc_id": 3888561,
                  "rek_isi_loc_pid": "UQ:330391",
                  "rek_isi_loc_xsdmf_id": null,
                },
                "fez_record_search_key_ismemberof": Array [
                  Object {
                    "rek_ismemberof": "UQ:3931",
                    "rek_ismemberof_id": 11502328,
                    "rek_ismemberof_lookup": "UQ Diamantina Institute Publications",
                    "rek_ismemberof_order": 1,
                    "rek_ismemberof_pid": "UQ:330391",
                    "rek_ismemberof_xsdmf_id": null,
                  },
                  Object {
                    "rek_ismemberof": "UQ:320785",
                    "rek_ismemberof_id": 11502329,
                    "rek_ismemberof_lookup": "Official 2015 Collection",
                    "rek_ismemberof_order": 2,
                    "rek_ismemberof_pid": "UQ:330391",
                    "rek_ismemberof_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_issn": Array [
                  Object {
                    "fez_journal_issns": Array [
                      Object {
                        "fez_journal": Object {
                          "jnl_created_date": "2010-11-19 00:00:00",
                          "jnl_era_id": 15513,
                          "jnl_era_year": 2010,
                          "jnl_foreign_name": null,
                          "jnl_id": 3283,
                          "jnl_journal_name": "Journal of Immunology",
                          "jnl_rank": "A*",
                          "jnl_updated_date": "2010-11-19 00:00:00",
                        },
                        "jni_id": 5435,
                        "jni_issn": "1550-6606",
                        "jni_issn_order": 2,
                        "jni_jnl_id": 3283,
                      },
                      Object {
                        "fez_journal": Object {
                          "jnl_created_date": "2011-10-28 00:00:00",
                          "jnl_era_id": 15513,
                          "jnl_era_year": 2012,
                          "jnl_foreign_name": "",
                          "jnl_id": 30578,
                          "jnl_journal_name": "Journal of Immunology",
                          "jnl_rank": null,
                          "jnl_updated_date": "2011-10-28 00:00:00",
                        },
                        "jni_id": 50560,
                        "jni_issn": "1550-6606",
                        "jni_issn_order": 2,
                        "jni_jnl_id": 30578,
                      },
                      Object {
                        "fez_journal": Object {
                          "jnl_created_date": "2014-07-16 00:00:00",
                          "jnl_era_id": 15513,
                          "jnl_era_year": 2015,
                          "jnl_foreign_name": "",
                          "jnl_id": 47977,
                          "jnl_journal_name": "Journal of Immunology",
                          "jnl_rank": null,
                          "jnl_updated_date": "2014-07-16 00:00:00",
                        },
                        "jni_id": 78427,
                        "jni_issn": "1550-6606",
                        "jni_issn_order": 2,
                        "jni_jnl_id": 47977,
                      },
                      Object {
                        "fez_journal": Object {
                          "jnl_created_date": "2017-09-06 00:00:00",
                          "jnl_era_id": 15513,
                          "jnl_era_year": 2018,
                          "jnl_foreign_name": "",
                          "jnl_id": 100768,
                          "jnl_journal_name": "Journal of Immunology",
                          "jnl_rank": null,
                          "jnl_updated_date": "2017-09-06 00:00:00",
                        },
                        "jni_id": 165940,
                        "jni_issn": "1550-6606",
                        "jni_issn_order": 2,
                        "jni_jnl_id": 100768,
                      },
                    ],
                    "fez_sherpa_romeo": Object {
                      "srm_date_updated": "2017-09-30 18:51:44",
                      "srm_id": 6131,
                      "srm_issn": "1550-6606",
                      "srm_journal_link": "http://example.com",
                      "srm_journal_name": "Journal of Immunology",
                      "srm_json": "{}",
                    },
                    "rek_issn": "1550-6606",
                    "rek_issn_id": 5088122,
                    "rek_issn_lookup": "",
                    "rek_issn_order": 1,
                    "rek_issn_pid": "UQ:330391",
                    "rek_issn_xsdmf_id": null,
                  },
                  Object {
                    "fez_journal_issns": Array [
                      Object {
                        "fez_journal": Object {
                          "jnl_created_date": "2010-11-19 00:00:00",
                          "jnl_era_id": 15513,
                          "jnl_era_year": 2010,
                          "jnl_foreign_name": null,
                          "jnl_id": 3283,
                          "jnl_journal_name": "Journal of Immunology",
                          "jnl_rank": "A*",
                          "jnl_updated_date": "2010-11-19 00:00:00",
                        },
                        "jni_id": 5434,
                        "jni_issn": "0022-1767",
                        "jni_issn_order": 1,
                        "jni_jnl_id": 3283,
                      },
                      Object {
                        "fez_journal": Object {
                          "jnl_created_date": "2011-10-28 00:00:00",
                          "jnl_era_id": 15513,
                          "jnl_era_year": 2012,
                          "jnl_foreign_name": "",
                          "jnl_id": 30578,
                          "jnl_journal_name": "Journal of Immunology",
                          "jnl_rank": null,
                          "jnl_updated_date": "2011-10-28 00:00:00",
                        },
                        "jni_id": 50559,
                        "jni_issn": "0022-1767",
                        "jni_issn_order": 1,
                        "jni_jnl_id": 30578,
                      },
                      Object {
                        "fez_journal": Object {
                          "jnl_created_date": "2014-07-16 00:00:00",
                          "jnl_era_id": 15513,
                          "jnl_era_year": 2015,
                          "jnl_foreign_name": "",
                          "jnl_id": 47977,
                          "jnl_journal_name": "Journal of Immunology",
                          "jnl_rank": null,
                          "jnl_updated_date": "2014-07-16 00:00:00",
                        },
                        "jni_id": 78426,
                        "jni_issn": "0022-1767",
                        "jni_issn_order": 1,
                        "jni_jnl_id": 47977,
                      },
                      Object {
                        "fez_journal": Object {
                          "jnl_created_date": "2017-09-06 00:00:00",
                          "jnl_era_id": 15513,
                          "jnl_era_year": 2018,
                          "jnl_foreign_name": "",
                          "jnl_id": 100768,
                          "jnl_journal_name": "Journal of Immunology",
                          "jnl_rank": null,
                          "jnl_updated_date": "2017-09-06 00:00:00",
                        },
                        "jni_id": 165939,
                        "jni_issn": "0022-1767",
                        "jni_issn_order": 1,
                        "jni_jnl_id": 100768,
                      },
                    ],
                    "fez_sherpa_romeo": Object {
                      "srm_date_updated": "2017-09-30 15:14:27",
                      "srm_id": 6130,
                      "srm_issn": "0022-1767",
                      "srm_journal_link": "http://example.com",
                      "srm_journal_name": "Journal of Immunology",
                      "srm_json": "{}",
                    },
                    "rek_issn": "0022-1767",
                    "rek_issn_id": 5088123,
                    "rek_issn_lookup": "",
                    "rek_issn_order": 2,
                    "rek_issn_pid": "UQ:330391",
                    "rek_issn_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_issue_number": Object {
                  "rek_issue_number": "9",
                  "rek_issue_number_id": 4396330,
                  "rek_issue_number_pid": "UQ:330391",
                  "rek_issue_number_xsdmf_id": null,
                },
                "fez_record_search_key_journal_name": Object {
                  "rek_journal_name": "Journal of Immunology",
                  "rek_journal_name_id": 5045853,
                  "rek_journal_name_pid": "UQ:330391",
                  "rek_journal_name_xsdmf_id": null,
                },
                "fez_record_search_key_keywords": Array [
                  Object {
                    "rek_keywords": "Human papillomavirus",
                    "rek_keywords_id": 29137284,
                    "rek_keywords_order": 1,
                    "rek_keywords_pid": "UQ:330391",
                    "rek_keywords_xsdmf_id": null,
                  },
                  Object {
                    "rek_keywords": "Papillomavirus",
                    "rek_keywords_id": 29137285,
                    "rek_keywords_order": 2,
                    "rek_keywords_pid": "UQ:330391",
                    "rek_keywords_xsdmf_id": null,
                  },
                  Object {
                    "rek_keywords": "Virus-like particle",
                    "rek_keywords_id": 29137286,
                    "rek_keywords_order": 3,
                    "rek_keywords_pid": "UQ:330391",
                    "rek_keywords_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_language": Array [
                  Object {
                    "rek_language": "eng",
                    "rek_language_id": 5217768,
                    "rek_language_order": 1,
                    "rek_language_pid": "UQ:330391",
                    "rek_language_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_language_of_journal_name": Array [],
                "fez_record_search_key_language_of_title": Array [],
                "fez_record_search_key_license": null,
                "fez_record_search_key_link": Array [],
                "fez_record_search_key_link_description": Array [],
                "fez_record_search_key_native_script_journal_name": null,
                "fez_record_search_key_native_script_title": null,
                "fez_record_search_key_notes": null,
                "fez_record_search_key_oa_embargo_days": Object {
                  "rek_oa_embargo_days": "365",
                  "rek_oa_embargo_days_id": 5678,
                  "rek_oa_embargo_days_pid": "UQ:330391",
                  "rek_oa_embargo_days_xsdmf_id": null,
                },
                "fez_record_search_key_oa_notes": Object {
                  "rek_oa_notes": "12 month embargo",
                  "rek_oa_notes_id": 131336,
                  "rek_oa_notes_pid": "UQ:330391",
                  "rek_oa_notes_xsdmf_id": null,
                },
                "fez_record_search_key_oa_status": Object {
                  "rek_oa_status": 453693,
                  "rek_oa_status_id": 311344,
                  "rek_oa_status_lookup": "DOI",
                  "rek_oa_status_pid": "UQ:330391",
                  "rek_oa_status_xsdmf_id": null,
                },
                "fez_record_search_key_oa_status_type": null,
                "fez_record_search_key_place_of_publication": Object {
                  "rek_place_of_publication": "Bethesda, MD, United States",
                  "rek_place_of_publication_id": 4161211,
                  "rek_place_of_publication_pid": "UQ:330391",
                  "rek_place_of_publication_xsdmf_id": null,
                },
                "fez_record_search_key_publisher": Object {
                  "rek_publisher": "American Association of Immunologists",
                  "rek_publisher_id": 4424543,
                  "rek_publisher_pid": "UQ:330391",
                  "rek_publisher_xsdmf_id": null,
                },
                "fez_record_search_key_pubmed_central_id": null,
                "fez_record_search_key_pubmed_id": Object {
                  "rek_pubmed_id": "24748633",
                  "rek_pubmed_id_id": 218283,
                  "rek_pubmed_id_pid": "UQ:330391",
                  "rek_pubmed_id_xsdmf_id": null,
                },
                "fez_record_search_key_refereed": null,
                "fez_record_search_key_refereed_source": Object {
                  "rek_refereed_source": "453635",
                  "rek_refereed_source_id": 1174248,
                  "rek_refereed_source_lookup": "Ulrichs",
                  "rek_refereed_source_pid": "UQ:330391",
                  "rek_refereed_source_xsdmf_id": null,
                },
                "fez_record_search_key_retracted": null,
                "fez_record_search_key_roman_script_journal_name": null,
                "fez_record_search_key_roman_script_title": null,
                "fez_record_search_key_scopus_id": Object {
                  "fez_scopus_citations": Object {
                    "sc_1d": 0,
                    "sc_1m": 0,
                    "sc_1w": 0,
                    "sc_1y": 147,
                    "sc_2d": 0,
                    "sc_3d": 0,
                    "sc_3m": 1,
                    "sc_4d": 0,
                    "sc_5d": 0,
                    "sc_6d": 0,
                    "sc_6m": 0,
                    "sc_citation_url": "https://go.openathens.net/redirector/uq.edu.au?url=http://www.scopus.com/results/citedbyresults.url?sort=plf-f&src=s&sot=cite&sdt=a&cite=2-s2.0-84899524861",
                    "sc_count": 13,
                    "sc_created": "1526521574",
                    "sc_eid": "2-s2.0-84899524861",
                    "sc_last_checked": "1526521574",
                  },
                  "rek_scopus_id": "2-s2.0-84899524861",
                  "rek_scopus_id_id": 2395638,
                  "rek_scopus_id_pid": "UQ:330391",
                  "rek_scopus_id_xsdmf_id": null,
                },
                "fez_record_search_key_start_page": Object {
                  "rek_start_page": "4007",
                  "rek_start_page_id": 5567023,
                  "rek_start_page_pid": "UQ:330391",
                  "rek_start_page_xsdmf_id": null,
                },
                "fez_record_search_key_subject": Array [
                  Object {
                    "rek_subject": 453394,
                    "rek_subject_id": 9519701,
                    "rek_subject_lookup": "2403 Immunology",
                    "rek_subject_order": 1,
                    "rek_subject_pid": "UQ:330391",
                    "rek_subject_xsdmf_id": null,
                  },
                ],
                "fez_record_search_key_total_pages": Object {
                  "rek_total_pages": "5",
                  "rek_total_pages_id": 5474537,
                  "rek_total_pages_pid": "UQ:330391",
                  "rek_total_pages_xsdmf_id": null,
                },
                "fez_record_search_key_translated_journal_name": null,
                "fez_record_search_key_translated_title": null,
                "fez_record_search_key_volume_number": Object {
                  "rek_volume_number": "192",
                  "rek_volume_number_id": 5103536,
                  "rek_volume_number_pid": "UQ:330391",
                  "rek_volume_number_xsdmf_id": null,
                },
                "fez_record_search_key_wok_doc_types": Array [],
                "fez_record_search_key_zoorec_id": null,
                "metricData": Object {
                  "citation_url": "https://queensland.altmetric.com/details/101417",
                  "count": 5,
                  "difference": 3,
                  "source": "altmetric",
                },
                "rek_altmetric_id": 2291601,
                "rek_altmetric_id_xsdmf_id": null,
                "rek_altmetric_score": 5,
                "rek_altmetric_score_xsdmf_id": null,
                "rek_citation": "<a class=\\"author_id_link\\" title=\\"Browse by Author ID for Frazer, Ian H.\\" href=\\"/list/author_id/410/\\">Frazer, Ian H.</a> (<span class=\\"citation_date\\">2014</span>) <a class=\\"citation_title\\" title=\\"Click to view Journal Article: Development and implementation of papillomavirus prophylactic vaccines\\" href=\\"/view/UQ:330391\\">Development and implementation of papillomavirus prophylactic vaccines</a>. <i><span class=\\"citation_journal_name\\">Journal of Immunology</span></i>, <i><span class=\\"citation_volume_number\\">192</span></i> <span class=\\"citation_issue_number\\">9</span>: <span class=\\"citation_start_page\\">4007</span>-<span class=\\"citation_end_page\\">4011</span>. doi:<span class=\\"citation_doi\\">10.4049/jimmunol.1490012</span>",
                "rek_copyright": "on",
                "rek_copyright_xsdmf_id": null,
                "rek_created_date": "2014-05-20T00:24:11Z",
                "rek_created_date_xsdmf_id": null,
                "rek_date": "2014-05-01T00:00:00Z",
                "rek_date_xsdmf_id": null,
                "rek_depositor": 8524,
                "rek_depositor_affiliation": 1048,
                "rek_depositor_affiliation_xsdmf_id": null,
                "rek_depositor_xsdmf_id": null,
                "rek_description": "Translation of basic scientific findings into practical patient outcomes is a significant exercise even when the goal is conceptually straightforward, as in the development of a vaccine for an infectious disease. Recognition of the association of cervical cancer with papillomavirus infection encouraged development of a vaccine to help with prevention of this very common cancer, causing over 250,000 deaths each year worldwide. To introduce a vaccine program, it was however necessary to develop a technology for making viral Ag, demonstrate that systemic immunization could provide mucosal surface protection in the genital tract, develop assays for vaccine potency, and understand enough about the epidemiology and natural history of the infection to plan effective intervention strategies. This process took ~25 years. The major hurdle, now that effective vaccines are available, is to ensure their deployment in the countries where they are most needed. The development and deployment of human papillomavirus vaccines demonstrate the benefits of collaborative research activity across the globe, and between academia and industry, to translate scientific discoveries into public health benefits.",
                "rek_description_xsdmf_id": null,
                "rek_display_type": 179,
                "rek_display_type_lookup": "Journal Article",
                "rek_display_type_xsdmf_id": null,
                "rek_file_downloads": 0,
                "rek_formatted_abstract": null,
                "rek_formatted_abstract_xsdmf_id": null,
                "rek_formatted_title": null,
                "rek_formatted_title_xsdmf_id": null,
                "rek_genre": "Journal Article",
                "rek_genre_type": "Article (original research)",
                "rek_genre_type_xsdmf_id": null,
                "rek_genre_xsdmf_id": null,
                "rek_herdc_notes": "&nbsp;Ian H. Frazer, University of Queensland Diamantina Institute, Translational Research Institute, 37 Kent Street, Woolloongabba, QLD 4102, Australia.",
                "rek_herdc_notes_xsdmf_id": null,
                "rek_object_type": 3,
                "rek_object_type_lookup": "Record",
                "rek_object_type_xsdmf_id": null,
                "rek_pid": "UQ:330391",
                "rek_pubmed_doc_type": null,
                "rek_pubmed_doc_type_lookup": null,
                "rek_pubmed_doc_type_xsdmf_id": null,
                "rek_scopus_citation_count": 13,
                "rek_scopus_doc_type": "ar",
                "rek_scopus_doc_type_lookup": null,
                "rek_scopus_doc_type_xsdmf_id": null,
                "rek_security_inherited": 1,
                "rek_status": 2,
                "rek_status_lookup": "Published",
                "rek_status_xsdmf_id": null,
                "rek_subtype": "Article (original research)",
                "rek_subtype_xsdmf_id": null,
                "rek_thomson_citation_count": 12,
                "rek_thomson_citation_count_xsdmf_id": null,
                "rek_title": "Development and implementation of papillomavirus prophylactic vaccines",
                "rek_title_xsdmf_id": null,
                "rek_updated_date": "2018-01-19T02:57:37Z",
                "rek_updated_date_xsdmf_id": null,
                "rek_wok_doc_type": "@",
                "rek_wok_doc_type_lookup": null,
                "rek_wok_doc_type_xsdmf_id": null,
              },
            ]
          }
          showMetrics={true}
        />
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </StandardCard>
</Fragment>
`;

exports[`Component TopCitedPublications should render top cited publications module with not available message 1`] = `
<Fragment>
  <Alert
    alertId="alert-error"
    allowDismiss={false}
    customIcon={null}
    customType={null}
    disableAlertClick={false}
    dismissTitle="Click to dismiss this alert"
    message="Trending works are temporarily unavailable"
    showLoader={false}
    title="There has been an error"
    type="error"
    wiggle={null}
  />
</Fragment>
`;
